# CS380_2-Snowman

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/: Animation.hpp  Geometry.hpp  PickableObject.hpp  Snowman.hpp
Application/src/: Animation.cpp  DefaultMaterial.cpp  Geometry.cpp  LineMaterial.cpp  PickableObject.cpp  PickingMaterial.cpp  Snowman.cpp  main.cpp
Engine/: CMakeLists.txt
Resources/DefaultMaterial/: FragmentShader.glsl  VertexShader.glsl
